--- a/prometheus.yml
+++ b/prometheus.yml
@@ -4,7 +4,7 @@ global:
 scrape_configs:
   - job_name: 'spring-boot-app'
     static_configs:
-      - targets: ['host.docker.internal:8081']  # Update if needed
+      - targets: ['localhost:8081']  # Update if needed
 
   - job_name: 'prometheus'
     static_configs:
