updated prometheus file

--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,15 +2,11 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'spring-boot-app'
+  - job_name: 'order-mgmt-app'
+    metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ['localhost:8081']  # Update if needed
+      - targets: ['localhost:8081']
 
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
-
-  - job_name: 'java-app'
-    metrics_path: '/actuator/prometheus'
-    static_configs:
-      - targets: ['172.17.0.1:8081']
